--- a/.screenrc
+++ b/.screenrc
@@ -1,7 +1,7 @@
 # Status line
 hardstatus alwayslastline
 #hardstatus string '%H %{= mK}%-Lw%{= KW}%50>%n%f* %t%{= mK}%+Lw%< %{= kG}%-=%D %d %M %Y %c:%s%{-}'
-hardstatus string '%H %{= kG}%c:%s%{-}%{= KW}%50> %n:%h'
+hardstatus string '%H %{= kG}%c:%s%{-}%{= KW}%50> %n:%t'
 # scrollback depth
 defscrollback 10000
 # detach on hangup
